# excel_to_csv_fast

./: .gitignore  Cargo.toml  README.md
src/: convert.rs  entry.rs  feed_handling.rs  main.rs  prelude.rs  scratch_convert.rs
src/tools/: debug_buffer.rs  mod.rs
